--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,7 +16,7 @@
   --light-color: #f8f8f8;
   --dark-color: #505050;
   --text-color: #131313;
-  --link-color: #3b63fb;
+  --link-color: #34a1eb;
   --link-hover-color: #1d3ecf;
     --hero-font-color: #34a1eb;
  
