--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -17,7 +17,7 @@
 }
 
 .hero picture {
-  /*position: absolute;*/
+  position: absolute;
   z-index: -1;
   inset: 0;
   object-fit: cover;
@@ -27,7 +27,7 @@
 .hero img {
   object-fit: cover;
   width: 100%;
-  height: 50%;
+  height: 100%;
 }
 
 @media (width >= 900px) {
