--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -17,7 +17,8 @@
 }
 
 .hero picture {
-  position: absolute;
+  position: sticky;
+    top: 20px;
   z-index: -1;
   inset: 0;
   object-fit: cover;
