--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -19,10 +19,10 @@
 .hero picture {
   position: sticky;
     top: 20px;
-  z-index: -1;
+  /*z-index: -1;
   inset: 0;
   object-fit: cover;
-  box-sizing: border-box;
+  box-sizing: border-box;*/
 }
 
 .hero img {
