--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -17,12 +17,11 @@
 }
 
 .hero picture {
-  position: sticky;
-    top: 20px;
-  /*z-index: -1;
+  position: absolute;
+  z-index: -1;
   inset: 0;
   object-fit: cover;
-  box-sizing: border-box;*/
+  box-sizing: border-box;
 }
 
 .hero img {
