--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,7 +7,15 @@ header .nav-wrapper {
     padding: 20px;
 }
 
-header nav {
+header nav::after {
+    content '':
+    background: blue;
+    height: 10px;
+    width: 10px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    
   box-sizing: border-box;
   display: grid;
   grid-template:
