--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,18 +3,11 @@ header .nav-wrapper {
   background-color: var(--background-color);
   width: 100%;
   z-index: 2;
-  position: relative;
+  position: absolute;
     padding: 20px;
 }
 
-header nav::after {
-    content '':
-    background: blue;
-    height: 10px;
-    width: 10px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
+header nav {
     
   box-sizing: border-box;
   display: grid;
