--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -9,11 +9,21 @@
   min-height: 300px;
 }
 
-.hero h1 {
+.hero h1 { 
+    position: relative;
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
   color: var( --hero-font-color);
+}
+.hero h1::after{
+    content: '';
+    background: linear-gradient(to right, #3299a8, #173b85);
+    height: 4px;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
 
 .hero picture {
