--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -10,7 +10,7 @@
 }
 
 .hero h1 { 
-    position: relative;
+    position: absolute;
     max-width: max-content;
   margin-left: auto;
   margin-right: auto;
