--- a/styles/styles.css
+++ b/styles/styles.css
@@ -80,6 +80,7 @@ body {
   font-family: var(--body-font-family);
   font-size: var(--body-font-size-m);
   line-height: 1.6;
+    white-space-collapse: collapse;
 }
 
 body.appear {
