--- a/styles/styles.css
+++ b/styles/styles.css
@@ -208,9 +208,9 @@ button:disabled:hover {
 
 a.button.secondary,
 button.secondary {
-  background-color: unset;
+  background-color: var(--link-color);
   border: 2px solid currentcolor;
-  color: var(--text-color);
+  color: var(--background-color);
 }
 
 main img {
