--- a/styles/styles.css
+++ b/styles/styles.css
@@ -245,9 +245,9 @@ main > .section:first-of-type {
   margin-top: 0;
 }
 
-/*ul li::marker, ol li::marker {
-  content: none;   Remove the bullet or number 
-}*/
+ul li::marker, ol li::marker {
+  content: none;   
+}
 
 @media (width >= 900px) {
   main > .section > div {
