--- a/styles/styles.css
+++ b/styles/styles.css
@@ -213,10 +213,17 @@ button.secondary {
   color: var(--background-color);
 }
 
+/*edit made to photo in hero*/
+main {
+  margin: 0;
+  padding: 0;
+  width: 100vw; 
+}
+
 main img {
-  max-width: 100%;
-  width: auto;
+  width: 100%;
   height: auto;
+  display: block;
 }
 
 .icon {
