--- a/styles/styles.css
+++ b/styles/styles.css
@@ -75,7 +75,7 @@
 body {
   display: none;
   margin: 0;
-  background-color: var(--background-color);
+  /*background-color: var(--background-color);*/
   color: var(--text-color);
   font-family: var(--body-font-family);
   font-size: var(--body-font-size-m);
