--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,6 +19,7 @@
   --link-color: #34a1eb;
   --link-hover-color: #1d3ecf;
     --hero-font-color: #34a1eb;
+    --new-button-color: #cdd67a
  
 
   /* fonts */
@@ -93,7 +94,7 @@ header {
 
 header .header,
 footer .footer {
-  visibility: hidden;
+  /*visibility: hidden;*/
 }
 
 header .header[data-block-status="loaded"],
@@ -184,7 +185,7 @@ button {
   line-height: 1.25;
   text-align: center;
   text-decoration: none;
-  background-color: var(--link-color);
+  background-color: var(--new-button-color);
   color: var(--background-color);
   cursor: pointer;
   overflow: hidden;
@@ -196,7 +197,7 @@ a.button:hover,
 a.button:focus,
 button:hover,
 button:focus {
-  background-color: var(--link-hover-color);
+  background-color: var(--new-button-color);
   cursor: pointer;
 }
 
@@ -266,4 +267,90 @@ main .section.highlight {
   background-color: var(--light-color);
   margin: 0;
   padding: 40px 0;
+}
+/* Section Columns */
+/*  stylelint-disable no-descending-specificity */
+
+@media (width >= 900px ) {
+  main .section[data-layout] .layout-wrapper {
+    flex-direction: row;
+    display: flex;
+  }
+
+  main .section[data-layout="50/50"] .layout-wrapper > div {
+    flex: 0 1 calc(50% - 20px);
+    margin-right: 20px;
+  }
+  
+  main .section[data-layout="40/60"] .layout-wrapper > div {
+    flex: 0 1 60%;
+
+    &:first-of-type {
+      flex: 0 1 calc(40% - 20px);
+      margin-right: 20px;
+    }
+  }
+  
+  main .section[data-layout="60/40"] .layout-wrapper > div {
+    flex: 0 1 40%;
+
+    &:first-of-type {
+      flex: 0 1 calc(60% - 20px);
+      margin-right: 20px;
+    }
+  }
+
+  main .section[data-layout="70/30"] .layout-wrapper > div {
+    flex: 0 1 30%;
+
+    &:first-of-type {
+      flex: 0 1 calc(70% - 20px);
+      margin-right: 20px;
+    }
+  }
+
+  main .section[data-layout="30/70"] .layout-wrapper > div {
+    flex: 0 1 70%;
+
+    &:first-of-type {
+      flex: 0 1 calc(30% - 20px);
+      margin-right: 20px;
+    }
+  }
+  
+  main .section[data-layout="25/75"] .layout-wrapper > div {
+    flex: 0 1 75%;
+
+    &:first-of-type {
+      flex: 0 1 calc(25% - 20px);
+      margin-right: 20px;
+    }
+  }
+  
+  main .section[data-layout="75/25"] .layout-wrapper > div {
+    flex: 0 1 25%;
+
+    &:first-of-type {
+      flex: 0 1 calc(75% - 20px);
+      margin-right: 20px;
+    }
+  }
+
+  main .section[data-layout="80/20"] .layout-wrapper > div {
+    flex: 0 1 20%;
+
+    &:first-of-type {
+      flex: 0 1 calc(80% - 20px);
+      margin-right: 20px;
+    }
+  }
+
+  main .section[data-layout="20/80"] .layout-wrapper > div {
+    flex: 0 1 80%;
+
+    &:first-of-type {
+      flex: 0 1 calc(20% - 20px);
+      margin-right: 20px;
+    }
+  }
 }
