--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,6 +18,7 @@
   --text-color: #131313;
   --link-color: #34a1eb;
   --link-hover-color: #1d3ecf;
+    --new-link-color: #cdd67a
     --hero-font-color: #34a1eb;
     --new-button-color: #cdd67a
  
