--- a/styles/styles.css
+++ b/styles/styles.css
@@ -160,7 +160,7 @@ button {
 
 /* links */
 a:any-link {
-  color: var(--link-color);
+  color: var(--new-link-color);
   text-decoration: none;
   overflow-wrap: break-word;
 }
