--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,9 +18,9 @@
   --text-color: #131313;
   --link-color: #34a1eb;
   --link-hover-color: #1d3ecf;
-    --new-link-color: #e6f065;
+    --new-link-color: #8a942c;
     --hero-font-color: #34a1eb;
-    --new-button-color: #e6f065;
+    --new-button-color: #8a942c;
  
 
   /* fonts */
