--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -6,7 +6,7 @@
 .table table {
   width: 100%;
   max-width: 100%;
-  border-collapse: collapse;
+  border-collapse: seperate;
   font-size: var(--body-font-size-xs);
 }
 /*changing table colors*/
