--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -11,7 +11,7 @@
 }
 /*changing table colors*/
 .table table thead tr {
-  background-color: #007B8F; /* Adjusted header background color */
+  background-color: #286684; /* Adjusted header background color */
   color: white; /* Made text white */
 }
 
