--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -31,3 +31,105 @@
     order: unset;
   }
 }
+/*columns*/
+@media (width >= 900px) {
+  main .section[data-layout] .layout-wrapper {
+    display: flex;
+    flex-direction: row;
+  }
+
+  /* 50/50 */
+  main .section[data-layout="50/50"] .layout-wrapper > div {
+    flex: 0 1 calc(50% - 20px);
+    margin-right: 20px;
+  }
+
+  main .section[data-layout="50/50"] .layout-wrapper > div:last-of-type {
+    margin-right: 0;
+  }
+
+  /* 40/60 */
+  main .section[data-layout="40/60"] .layout-wrapper > div {
+    flex: 0 1 60%;
+  }
+
+  main .section[data-layout="40/60"] .layout-wrapper > div:first-of-type {
+    flex: 0 1 calc(40% - 20px);
+    margin-right: 20px;
+  }
+
+  /* 60/40 */
+  main .section[data-layout="60/40"] .layout-wrapper > div {
+    flex: 0 1 40%;
+  }
+
+  main .section[data-layout="60/40"] .layout-wrapper > div:first-of-type {
+    flex: 0 1 calc(60% - 20px);
+    margin-right: 20px;
+  }
+
+  /* 70/30 */
+  main .section[data-layout="70/30"] .layout-wrapper > div {
+    flex: 0 1 30%;
+  }
+
+  main .section[data-layout="70/30"] .layout-wrapper > div:first-of-type {
+    flex: 0 1 calc(70% - 20px);
+    margin-right: 20px;
+  }
+
+  /* 30/70 */
+  main .section[data-layout="30/70"] .layout-wrapper > div {
+    flex: 0 1 70%;
+  }
+
+  main .section[data-layout="30/70"] .layout-wrapper > div:first-of-type {
+    flex: 0 1 calc(30% - 20px);
+    margin-right: 20px;
+  }
+
+  /* 25/75 */
+  main .section[data-layout="25/75"] .layout-wrapper > div {
+    flex: 0 1 75%;
+  }
+
+  main .section[data-layout="25/75"] .layout-wrapper > div:first-of-type {
+    flex: 0 1 calc(25% - 20px);
+    margin-right: 20px;
+  }
+
+  /* 75/25 */
+  main .section[data-layout="75/25"] .layout-wrapper > div {
+    flex: 0 1 25%;
+  }
+
+  main .section[data-layout="75/25"] .layout-wrapper > div:first-of-type {
+    flex: 0 1 calc(75% - 20px);
+    margin-right: 20px;
+  }
+
+  /* 80/20 */
+  main .section[data-layout="80/20"] .layout-wrapper > div {
+    flex: 0 1 20%;
+  }
+
+  main .section[data-layout="80/20"] .layout-wrapper > div:first-of-type {
+    flex: 0 1 calc(80% - 20px);
+    margin-right: 20px;
+  }
+
+  /* 20/80 */
+  main .section[data-layout="20/80"] .layout-wrapper > div {
+    flex: 0 1 80%;
+  }
+
+  main .section[data-layout="20/80"] .layout-wrapper > div:first-of-type {
+    flex: 0 1 calc(20% - 20px);
+    margin-right: 20px;
+  }
+
+  /* Remove last margin-right in all layouts */
+  main .section[data-layout] .layout-wrapper > div:last-of-type {
+    margin-right: 0;
+  }
+}
