--- a/blocks/accordion/accordion.css
+++ b/blocks/accordion/accordion.css
@@ -15,7 +15,7 @@
 
 /* Accordion header */
 .accordion-item-label {
-  background-color: #f7f7f7;
+  background-color:  #286684;
   padding: 12px 16px;
   font-weight: bold;
   cursor: pointer;
@@ -23,7 +23,7 @@
   list-style: none;
   outline: none;
   user-select: none;
-    color:  #286684;
+    
 }
 
 /* Hide native marker (triangle) if desired */
