--- a/blocks/accordion/accordion.css
+++ b/blocks/accordion/accordion.css
@@ -10,7 +10,7 @@
   border-radius: 4px;
   margin-bottom: 8px;
   overflow: hidden;
-  background-color:#286684;;
+  background-color:#286684;
 }
 
 /* Accordion header */
