--- a/blocks/accordion/accordion.css
+++ b/blocks/accordion/accordion.css
@@ -15,7 +15,7 @@
 
 /* Accordion header */
 .accordion-item-label {
-  background-color: white;
+  background-color: #286684;
   padding: 12px 16px;
   font-weight: bold;
   cursor: pointer;
