--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,7 +4,7 @@ header .nav-wrapper {
   width: 100%;
   z-index: 2;
   position: absolute;
-    padding: 20px;
+    /* padding: 20px; */
 }
 
 header nav {
