--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,7 +18,7 @@
   --text-color: #131313;
   --link-color: #34a1eb;
   --link-hover-color: #1d3ecf;
-    --new-link-color: #bfc74a;
+    --new-link-color: #aab336;
     --hero-font-color: #34a1eb;
     --new-button-color: #8a942c;
  
