--- a/styles/styles.css
+++ b/styles/styles.css
@@ -163,6 +163,10 @@ a:any-link {
   text-decoration: none;
   overflow-wrap: break-word;
 }
+#online-grant-applucation-portal{
+    padding: 40px;
+    color: black;
+}
 
 a:hover {
   color: var(--link-hover-color);
