--- a/styles/styles.css
+++ b/styles/styles.css
@@ -163,9 +163,10 @@ a:any-link {
   text-decoration: none;
   overflow-wrap: break-word;
 }
+/* link on home page */
 h3#online-grant-application-portal{
-    padding: 40px;
-    color: black;
+    padding: 40px !important;
+    color: black !important;
 }
 
 a:hover {
