--- a/blocks/table/table1.css
+++ b/blocks/table/table1.css
@@ -9,11 +9,11 @@
   border-collapse: seperate;
   font-size: var(--body-font-size-xs);
 }
-/* changing table colors 
+/* changing table colors */
 .table table thead tr {
   background-color: #286684; 
   color: white; 
-} */
+} 
 
 @media (width >= 600px) {
   .table table {
