--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -58,6 +58,7 @@
 /* no header variant */
 .table.no-header table tbody tr {
   border-top: 1px solid #dadada;
+    background-color: #e0dec5;
 }
 
 /* striped variant */
