--- a/blocks/accordion/accordion.css
+++ b/blocks/accordion/accordion.css
@@ -10,7 +10,7 @@
   border-radius: 4px;
   margin-bottom: 8px;
   overflow: hidden;
-  background-color: #c3c791;
+  background-color: 006080;
 }
 
 /* Accordion header */
