--- a/blocks/accordion/accordion.css
+++ b/blocks/accordion/accordion.css
@@ -15,7 +15,7 @@
 
 /* Accordion header */
 .accordion-item-label {
-  background-color: #c3c791;
+  background-color: #006080;
   padding: 12px 16px;
   font-weight: bold;
   cursor: pointer;
@@ -36,7 +36,7 @@
 .accordion-item-body {
   padding: 12px 16px;
   border-top: 1px solid #ddd;
-  background-color: #e1ebda;
+  background-color: #BAC8D4;
   animation: fade-in 0.3s ease-in;
 }
 
