--- a/blocks/accordion/accordion.css
+++ b/blocks/accordion/accordion.css
@@ -39,7 +39,7 @@
   border-top: 1px solid #ddd;
   background-color: #BAC8D4;
   animation: fade-in 0.3s ease-in;
-    color: #fff;
+    color: #000000;
 }
 
 /* Optional: animate only when open */
