--- a/blocks/accordion/accordion.css
+++ b/blocks/accordion/accordion.css
@@ -16,7 +16,7 @@
 
 /* Accordion header */
 .accordion-item-label {
-  background-color: #fff;
+  background-color: #006080;
   padding: 12px 16px;
   font-weight: bold;
   cursor: pointer;
