--- a/blocks/accordion/accordion.css
+++ b/blocks/accordion/accordion.css
@@ -40,6 +40,7 @@
   background-color: #fff;
   animation: fade-in 0.3s ease-in;
   border-style: solid;
+  border-width: 3px;
   border-color: #BAC8D4;
   color: #000000;
 }
