Adjust accordion border width and color

--- a/blocks/accordion/accordion.css
+++ b/blocks/accordion/accordion.css
@@ -40,8 +40,8 @@
   background-color: #fff;
   animation: fade-in 0.3s ease-in;
   border-style: solid;
-  border-width: 3px;
-  border-color: #BAC8D4;
+  border-width: 2px;
+  border-color: #006080;
   color: #000000;
 }
 
